# Primus-Turbo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  HANDOFF_fp8_mega_moe_port.md  HANDOFF_step3_deadlock.md  LICENSE  MANIFEST.in  PR_DESCRIPTION.md  README.md  bench_flydsl_cr.py  bench_mla.py  bench_wgrad_kernels.py  build.sh  campaign_bwd_dsa.py  compile.sh  dpsk_attn_benchmark_result_20260706_AMD Instinct MI355X.csv  frontier_setup.py  gemm_turbo_bf16_20260305_MI300X.csv  gemm_turbo_bf16_20260305_MI300X_1.csv  gemm_turbo_bf16_20260305_MI300X_2.csv  gemm_turbo_bf16_20260306_MI300X.csv  gemm_turbo_bf16_20260306_MI300X_old.csv  gemm_turbo_bf16_20260309_MI300X.csv  gemm_turbo_fp8_tensorwise_20260305_MI300X.csv  gemm_turbo_fp8_tensorwise_20260305_MI300X_1.csv  gemm_turbo_fp8_tensorwise_20260309_MI300X.csv  grouped_gemm_bf16_tensorwise_ck_benchmark.csv  grouped_gemm_fp8_tensorwise_ck_benchmark.csv  grouped_gemm_turbo_bf16_20260305_MI300X.csv  grouped_gemm_turbo_bf16_20260310_MI300X.csv  minimal_example.py  minimal_example_run.sh  mxfp8_moe_perf_summary.html  mxfp8_moe_perf_summary.md  permute_preprocess.cu  primus_turbo_ut.py  pyproject.toml  repro_zero_group_lens.py  requirements.txt  (+8 more)
.claude/: race_fix.diff  race_fix_current_status.md  race_fix_progress.md
agent_docs/: blockwise-fp8-optimization-report.md  eval-ck-attention.md  full-profile-comparison-report.md  mi300x-vs-mi355x-baseline.md  phase3-ck-grouped-gemm-report.md  round4-ck-fp8-grouped-gemm-m-aware.md  round7-ck-fp8-gemm-m-aware.md
benchmark/: README.md  bench_variable_k_2_dsv3.py
docker/: Dockerfile
docs/: README_Mega_MoE.md  TILE_API.md  agent-optimization-plan.md  dispatch_tile_pack_groupedgemm_design.md  ep_metadata_cost_analysis.md  ep_split_m_overlap_guess.md  examples.md  expert_grouped_dispatch_optimization.md  fused_moe_triton_kernels.py  gfx1250_reference.md  install_dependencies.md  optimization-log.md  permute_map_design.md  phase1-attention-report.md  pipelined_ep_design.md  rocm_hip_gpu_execution_model.md
output/: baseline_attention.csv  baseline_gemm.csv  baseline_grouped_gemm.csv  bench_3way.py  csa_pool_sparse_fwd_kernel.avmfma_v1_1p23ms.py  harness_breakdown.py  harness_bwd.py  harness_full_fwd.py  harness_sparse_fwd.py  harness_tr16.py  round1_attention_fp8.csv
primus_turbo/: __init__.py  _agg_pmc.py  _agg_pmc_all.py  _bench_flydsl_attn_gptoss.py  _diag_delta.py  _diag_det.py  _isa_compile.py  _isa_dump.py  _pmc_parse.py  _probe_dkdv.py  _probe_tr.py  _prof_bwd.py  _prof_dkdv_occ.py  _prof_dqreduce.py  _prof_fwd.py  _prof_split.py  _rocdl_mfma.py
record/: DESIGN_dkv_interm_flydsl_multiwave.md  HANDOFF_dsa_flydsl_20260707.md  OPT_REPORT_dsa_flydsl_20260707.md  dsa_bwd_dkv_interm_20260707.md  dsa_bwd_dkv_interm_v2_20260707.md  dsa_bwd_dq_m16_20260707.md  dsa_fwd_pathB_m16_tr16_20260707.md
scripts/: AUTO_OPTIMIZE.md  _bf16_rcr_fwd_multi_family_probe.py  _bf16_rcr_fwd_qwen3_probe.py  _bf16_rrr_da_probe.py  _bf16_transpose_blockshape_probe.py  _bf16_vark_db_dsv3_gateup_extended_probe.py  _bf16_vark_db_gpt_oss_down_probe.py  _bf16_vark_db_gpt_oss_gateup_probe.py  _bf16_vark_db_multi_family_probe.py  _bf16_vark_db_probe.py  _fp8_grouped_fwd_vs_bwd_attribution.py  _fp8_grouped_nogate_probe.py  _fp8_rrr_config_probe.py  _fp8_var_k_config_probe.py  _fp8_var_k_qwen3_probe.py  _metric_grouped_bf16_gpt_oss_wall.py  _metric_grouped_bf16_weighted_wall.py  (+65 more)
(+1656 files in other folders)
